test/samples/invalid/resolving/mem_arg_repeat.maruir
fun foo<M, M>(a: u8)
